@@ -1,3 +1,7 @@
+yamdi-1.1:
+   * [Fix] Width and height calculation of H.263 video streams with
+           custom 16bit width and heigth was wrong.
+
 yamdi-1.0:
    * [Add] Width and height detection for VP6 alpha video
 
